# engram

./: .engram-session-tracking.json  .envrc  .gitignore  AGENTS.md  CHANGELOG.md  CODEBASE_REVIEW.md  Cargo.toml  DEVELOPMENT.md  IMPORT_DESIGN.md  LICENSE  README.md  RELEASE.md  SKILLS_AND_PROMPTS_INDEX.md  STORAGE_TEST.md  SUGGESTIONS.md  book.toml  build.rs  fixes.md  flake.nix  index.html  install.sh  result  subcommand_research.md  test_complete_validation.md  test_file.txt  test_hook.md  test_import.emd
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: c9qapvqlfmnly5xni9gw9bm1xj13wd6l-source  gw38xnh9164nj29qcsypz1y2wm6fk2fn-source  pm2i73p0kgw8i4z4nnfwaixq83026l1f-source  xh9wfbn9d64hmavam66yhl5vmkp0wi87-source
.engram/: FEEDBACK.md  remotes.json
.engram/context/: 003eb6eb-6dfb-4462-be87-fc2d2296ea35.json  03513d54-e687-49bd-9eee-90337d7fcbfd.json  07931f78-9db0-4980-a267-c099b523a5b6.json  0f4a2301-8973-4adc-941c-3416dd5a38b8.json  21c60993-c77b-4f00-8c68-642b66597221.json  3c80643a-fb95-4ebd-a766-25ba12ce53b6.json  3cc1b3b8-5325-4dfb-b6d2-860d855469e8.json  4e93d39c-753b-4af6-94bc-e98af301ea76.json  5f8ec694-3fb7-4577-a43f-570f7e370f48.json  65c6dc63-aecb-4f45-bf9e-32f0851778fc.json  6e2d8d62-cbc5-4d08-925e-5f2f3e13cf93.json  6e3aabf8-cd7e-4691-988b-1eeb43dd127c.json  76f53d9f-d0e0-4c0d-825f-f0bfec6c43b5.json  7e39d0ce-8d42-45f4-8f4e-833740e38958.json  8673fa17-c880-469b-9a32-a817f2b840e5.json  a03f17e3-6804-4bc6-9dc3-429411d84c8f.json  a5f1c135-a31d-4126-8018-769e695e48f0.json  aebbfac7-a5c6-4177-b2c0-da5a016c6626.json  c1494d60-ed4f-4cd7-b8f8-5233f09d03da.json  cc8970ac-fadc-423d-b4a7-3202a5938b6a.json  dde58b7d-6636-49e8-95c9-1cf75ee3c019.json  f33787ff-5ea7-4544-84f3-d455203fbb6e.json  f79df5bd-bfc1-4545-898d-b4c322ee9571.json
.engram/reasoning/: 021566c2-1e2d-48b7-b5fa-f59a11e3709b.json  041d6097-4562-4e4c-9ef0-18815b8f89cc.json  0f8ffcbe-cbfe-41d9-a052-c6d2dd65c27b.json  100db2d8-ac27-4c30-a02f-2da3d46396b5.json  127becfe-5d79-45ae-a2b1-ddfa2bceff0c.json  196412ad-5694-4eb5-b63c-cf5c879ff367.json  226f3c00-837e-44fa-bd4f-f3485c433017.json  23c5be34-f546-4156-8523-1a35ebe74442.json  261998b7-efd8-48d6-8e80-dda606006a3d.json  3cb73459-3893-4e0a-94c1-cc5e771cf8a9.json  4aae5dcd-291f-48e2-a5b0-0ce5518c3f36.json  76479877-c18d-4ce8-b22a-258d614b6a23.json  88d2041a-2185-4727-b053-41beefce1b16.json  8c01af50-4e07-49b4-9d82-be6932f313a2.json  ad1053aa-ae38-49a7-ba13-f8cb59e9c62e.json  b86ad7ca-4202-46ed-a723-b5c0370db0bf.json  d990fb3b-97f7-43c8-89b1-075f9dc08448.json  d9d94e4c-7a72-4a93-b733-bbb149d674d7.json  df5ab01a-f5f0-4303-9089-15fca386f5f7.json  e109cb09-1035-4348-9a21-1f6bd4c88ca6.json  e7c53ee2-d8b2-4efe-bfb0-22f85a72b857.json
.engram/relationship/: 05ff87c2-d4ca-4d0f-873e-4a32ec1d38e6.json  0bedd149-2b8a-4e18-9010-0e1f631a05be.json  0c2f3739-8649-4f95-821c-d1e0f909789c.json  1022ce4c-38e5-459f-98e0-29d1d79e864a.json  183f550d-0cbe-472c-a448-197e01b70f3e.json  1889cef7-da7c-43e6-a06f-cc90e989a696.json  (+60 more)
.sisyphus/: ralph-loop.local.md
book/: 404.html  getting-started.html  index.html  print.html  searchindex.js  toc.html  toc.js  user-guide.html  validation.html
coverage/: tarpaulin-report.html
docs/: SUMMARY.md  getting-started.md  user-guide.md  validation.md
examples/: basic_usage.rs  feature_demonstrations.rs  memory_storage_demo.rs  perkeep_demo.rs  test_migration.rs
nix/: assets.nix
prompts/: _evidence-based-validation-template.yaml  _update-to-engram.py
scripts/: migrate_persona_cov_fap_ov.py
skills/: README.md
src/: ask.rs  collab.rs  error.rs  lib.rs  locus_handlers.rs  locus_integration.rs  locus_main.rs  locus_tui.rs  main.rs  migration.rs  personas.rs  session.rs  version.rs
tests/: REGRESSION_TESTING.md  batch_task_tests.rs  bdd_runner.rs  git_refs_storage_tests.rs  integration.rs  lib.rs  nlq_integration_tests.rs  property_tests.rs  regression_plan.md  sync_integration_tests.rs  task_resolution_test.rs  validation.feature  workflow_prompt_test.rs
(+810 files in other folders)
