[package]
name = "engram"
version = "0.2.0"
edition = "2021"
authors = ["Vincent Palmer <shift@someone.section.me>"]
description = "Distributed memory system for AI agents - Rust implementation"
license = "AGPL-3.0-or-later OR LicenseRef-Commercial"
repository = "https://github.com/vincents-ai/engram"
build = "build.rs"

[dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive", "color"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# File system operations
walkdir = "2.4"
dirs = "5.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration validation
schemars = { version = "0.8", features = ["derive"] }

# BDD Testing Framework
cucumber = "0.20"
futures = "0.3"
async-trait = "0.1"

# Error handling and validation
validator = { version = "0.16", features = ["derive"] }

# SHA-256 hashing
sha2 = "0.10"
digest = "0.10"

# Hex encoding
hex = "0.4"

# HTTP client for Perkeep
reqwest = { version = "0.11", features = ["json", "blocking"] }

# Regular expressions
regex = "1.10"

# Git integration
git2 = { version = "0.19", features = ["vendored-openssl"] }

# Async runtime
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "macros"] }

# Vector search (optional)
rusqlite = { version = "0.32", features = ["bundled"], optional = true }
sqlite-vec = { version = "0.1", optional = true }
fastembed = { version = "5.8", optional = true }
ndarray = { version = "0.17", optional = true }
bytemuck = { version = "1.24", optional = true }

# TUI dependencies
crossterm = { version = "0.27", optional = true }
ratatui = { version = "0.26", optional = true }

[build-dependencies]
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3.8"
assert_cmd = "2.0"
predicates = "3.0"

[[bin]]
name = "engram"
path = "src/main.rs"

[[bin]]
name = "locus"
path = "src/locus_main.rs"

[[test]]
name = "bdd_runner"
path = "tests/bdd_runner.rs"
harness = false

[lib]
name = "engram"
path = "src/lib.rs"

[features]
default = ["sandbox", "tui"]
sandbox = []
tui = ["crossterm", "ratatui"]
vector-search = ["rusqlite", "sqlite-vec", "fastembed", "ndarray", "bytemuck"]
